objects/agf__WorkData__c.object
<CustomObject>
    <fields>
        <fullName>agf__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__StatusOfWork__c</fullName>
        <label>StatusOfWork</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>WorkData</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>agf__Date__c</columns>
        <columns>agf__StatusOfWork__c</columns>
        <columns>agf__UserId__c</columns>
        <columns>agf__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WD-{0000}</displayFormat>
        <label>WorkData Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WorkData</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>